--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,33 @@
 {
-  "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
+  "compilerOptions":
+  {
     "strict": true,
     "noEmit": true,
+    "removeComments": true,
+    "noImplicitAny": false,
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "lib": [ "DOM", "DOM.Iterable", "ESNext" ],
+    "allowJs": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "plugins": [
+    "plugins":
+    [
       {
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./*"]
+    "paths":
+    {
+      "@app/*": [ "./app/*" ],
+      "@components/*": [ "./components/*" ],
+      "@lib/*": [ "./lib/*" ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [ "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts" ],
+  "exclude": [ "node_modules" ]
 }
