--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   {
     "@fontsource/roboto": "^5.0.13",
 
+    "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.15.0",
     "next": "14.2.4",
     "prisma": "^5.15.0",
@@ -21,7 +23,7 @@
   "devDependencies":
   {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.2.19",
     "@types/react-dom": "^18",
 
     "postcss": "^8",
