--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.15.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.4",
     "prisma": "^5.15.0",
     "react": "^18",
